style.css
/* ... */
  /* styles specifically for phones smaller or equal to 540px */


@media screen and (max-width:540px){

.list-wrapper{
    grid-template-columns:1fr;
}
.item-title{
    width:70%;
    margin:auto;
}

.blazer-section{
  
  display:flex;
  flex-direction: column;
  margin:auto;
  justify-content: center;
  place-items: center;
}

}





@media screen and (max-width:1340px){
    

.main-text{
        margin-left:11px;
        border:8px solid red;
       }
   

 .staff-section{
    grid-template-columns: repeat(2,1fr);
   
    
 }
.offer-info{
    width:80%;
}

body,html{
   max-width: 100%;
    overflow-x:hidden;
    
}

.main-text h1{
        font-size:39px;
    }

 .banner{
    display:flex;
    justify-content:space-around;
    
 }
  
 .main-picture{
    height:100%;
 }

 
    .icon-wrapper{
        grid-template-columns:repeat(2,1fr);
       
    }
    

    .reviews{
        display:flex;
        flex-direction: column;
        align-items: center;
    }
    header{
        padding:4px;
    }
    
    .footer-top-text{
    font-size:7px;
   flex-wrap: nowrap;
   gap: 2px;   
    }

    .footer-top-text .logo{
        margin-right:17px;
    }
    
    .footer-bottom{
       gap: 11px;
    }
    .footer-bottom p{
        font-size: 11px;
        letter-spacing: 2px;
    }
    
    .footer-icons{
        margin:11px;
    }
    
    .seller{
        
        flex-direction: column;
    }
    
  
   #contact .main-picture{
       margin-top:-24px;
    }
    .figures-wrapper{
        grid-template-columns: repeat(2,1fr);
        
    }
    
    .modal-box{
       
        width:100%;
        z-index:99;
    }
    
   
    
.contact-block{
        grid-template-columns:repeat(2,1fr);
      }
   

   

   .total-amount{
   display: flex;
}


 
 .shoe-container{
     grid-template-columns:repeat(3,1fr);
     margin: auto;
 }

 
 
 .right-side{
    margin:22px;
    
    
    
 }

 .left-side img{
    height:auto;
    
 }

 .left-gallery img{
    height:auto;
   
 }



.blazer-container{
    grid-template-columns: repeat(2,1fr);
    
}

.footer-top-text{
    font-size:11px;

}
.blazer{
    display:flex;
    flex-direction:column;
}


}
/* ... */

